Bug 876597: Disable FM radio is airplane mode is enabled.